# BitrateViewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  backend.cpp  backend.h  config.h  ini.cpp  ini.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  optsdialog.cpp  optsdialog.h  optsdialog.ui  plot.cpp  plot.h  resources.qrc  sha1.hpp
resource/: template.html
template/: by_frame_large.tmpl  by_frame_vfr_large.tmpl  by_frame_vfr_normal.tmpl  by_gop_normal.tmpl  by_gop_vfr.tmpl
